--- a/3_implementation/makefile
+++ b/3_implementation/makefile
@@ -1,11 +1,52 @@
-all:
-	gcc -I inc src/line_parameters.c main_file.c -o out.exe
+PROJ_NAME = line_parameters_computation
+TEST_PROJ_NAME = Test_$(PROJ_NAME)
+
+BUILD_DIR = Build
+
+SRC = src/line_parameters.c
+
+TEST_SRC = test_file/test_parameters.c\
+unity/unity.c
+
+INC = -Iinc\
+-Iunity
+$(BUILD_DIR):
+	      mkdir $(BUILD_DIR)
+ifdef OS
+   RM = del /q
+   FixPath = $(subst /,\,$1)
+   EXEC = exe
+else
+   ifeq ($(shell uname), Linux)
+      RM = rm -rf
+      FixPath = $1
+	  EXEC = out
+   endif
+endif
+
+.PHONY : all test coverage run clean doc
+
+all:$(BUILD_DIR)
+	gcc main_file.c $(SRC) $(INC) -o $(call FixPath,$(BUILD_DIR)/$(PROJ_NAME).$(EXEC))
+
 run: all
-	out.exe
+	$(call FixPath,$(BUILD_DIR)/$(PROJ_NAME).$(EXEC))
 
-test:
-	gcc -I unity -I inc unity/unity.c test_file/test_parameters.c src/line_parameters.c -o t.exe
+test: $(SRC) $(TEST_SRC)
+	gcc $^ $(INC) -o $(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC))
+	$(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC))
 
+coverage:${PROJECT_NAME}
+	gcc -fprofile-arcs -ftest-coverage $(SRC) $(INC) -o $(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC))
+	$(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC))
+	gcov -a $(SRC)
+cpp:
+   cppcheck enable=all $(SRC)
 
-do: test
-	t.exe
+doc:
+	make -C doc
+
+clean:
+	$(RM) $(call FixPath,$(BUILD_DIR)/*)
+	make clean -C doc
+	rmdir $(BUILD_DIR) doc/html
