--- a/3_implementation/makefile
+++ b/3_implementation/makefile
@@ -40,9 +40,8 @@ coverage:${PROJECT_NAME}
 	gcc -fprofile-arcs -ftest-coverage $(SRC) $(INC) -o $(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC))
 	$(call FixPath,$(BUILD_DIR)/$(TEST_PROJ_NAME).$(EXEC))
 	gcov -a $(SRC)
-cpp:
-   cppcheck enable=all $(SRC)
-
+staticcheck:
+			cpp enable=all $(SRC)
 doc:
 	make -C doc
 
