--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: make  
-      run: make -C 3_implementation/all
+    - name: make  all
+      run: make all -C 3_implementation
 
