--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,5 +15,5 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: make  all
-      run: make all -C 3_implementation
+      run: make all -C 3_implementation?
 
