--- a/.github/workflows/cpp-check.yml
+++ b/.github/workflows/cpp-check.yml
@@ -1,4 +1,4 @@
-name: CPP_CHECK
+name: Cpp_Check
 
 on:
   push:
@@ -13,11 +13,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: configure
-      run: ./configure
+    
     - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+      run: make cpp -C 3_implementation
