--- a/.github/workflows/cpp-check.yml
+++ b/.github/workflows/cpp-check.yml
@@ -13,6 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
+    - name: Install cppcheck
+      run: sudo apt-get -y install cppcheck
     - name: make
       run: make cpp -C 3_implementation
