--- a/.github/workflows/Valgrind.yml
+++ b/.github/workflows/Valgrind.yml
@@ -19,5 +19,5 @@ jobs:
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
     - name: make test
       run: |
-        make test -C 3_implementation
-        valgrind  3_implementation/Build/Test_line_parameters_computation.out
+        make test -C 3_Implementation
+        valgrind  3_Implementation/Build/Test_line_parameters_computation.out
