--- a/.github/workflows/cpp-check.yml
+++ b/.github/workflows/cpp-check.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Install cppcheck
       run: sudo apt-get -y install cppcheck
     - name: make
-      run: make cpp -C 3_implementation
+      run: make cpp -C 3_Implementation
